# galion

./: .gitignore  Cargo.toml  README.md  build.rs  typos.toml
.github/workflows/: release.yml
librclone-bindings/: Cargo.toml  build.rs  go.sum  justfile
src/: app.rs  errors.rs  lib.rs  main.rs  rclone.rs  remote.rs  ui.rs
src/bindings/: Makefile
src/librclone/: bindings.rs  go.mod  mod.rs  rclone.rs
tests/: test.rs
tests/confs/: rclone.conf
