[package]
name = "galion"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "rclone sync on ratatui"
readme = "README.md"
keywords = ["rclone", "galion", "cloud", "sync", "tui", "ratatui"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/Its-Just-Nans/galion"
homepage = "https://github.com/Its-Just-Nans/galion"

[dependencies]
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
clap = { version = "4.5.53", features = ["derive"] }

[build-dependencies]
bindgen = "0.72.1"
