[package]
name = "galion"
version = "0.4.0"
edition = "2024"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
license = "MIT"
description = "rclone sync on ratatui"
readme = "README.md"
keywords = ["rclone", "galion", "cloud", "sync", "tui"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/Its-Just-Nans/galion"
homepage = "https://github.com/Its-Just-Nans/galion"

[dependencies]
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
rand = "0.9.2"
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }
clap = { version = "4.5.53", features = ["derive"] }

[build-dependencies]
bindgen = "0.72.1"
